# conlacata

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  snowpack.config.mjs  svelte.config.js  tsconfig.json
example_lang/: orthography.toml  parts_of_speech.toml
example_lang/lexicon/: pronouns.toml
old/: package-lock.json  package.json
old/src/: App.svelte  _global.scss
old/src/comps/: Character.svelte  CharacterTable.svelte  Conjugation.svelte  ConjugationTable.svelte  Dimension.svelte
old/src/mespeak/: source
old/src/pages/: Home.svelte
public/: index.html
src/: App.svelte  Header.svelte  Sidebar.svelte  _global.scss  _stores.ts  main.rs  stores.ts  types.rs
src/comps/: Character.svelte  CharacterTable.svelte  Conjugation.svelte  ConjugationTable.svelte  ConjugationTableAxisSelector.svelte  ConjugationTableGlobalSelector.svelte  ContentEditable.svelte  Dimension.svelte  Rule.svelte  Word.svelte
src/modules/: ipa.rs  lexicon.rs  mod.rs  orthography.rs  parts_of_speech.rs
src/pages/: Characters.svelte  Home.svelte  Lexicon.svelte  PartsOfSpeech.svelte  Settings.svelte  TextToSpeech.svelte
types/: static.d.ts
