[package]
name = "conlacata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~3.2.8", features = ["derive"] }
toml = "~0.5.9"
serde = { version = "~1.0.138", features = ["derive"] }
ansi_term = "~0.12.1"