[package]
name = "conlacata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
owo-colors = "3.5.0"
unicode-segmentation = "1.10.0"
either = "1.8.0"
regex = "1.7.1"
indexmap = "1.9.2"
color-eyre = "0.6.1"
smol_str = "0.1.23"
once_cell = "1.17.0"